# Observatory

./: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
crates/observatory/: Cargo.toml
crates/observatory-core/: Cargo.toml  README.md
crates/observatory-core/src/: identity.rs  ir.rs  lib.rs  normalize.rs
crates/observatory-core/tests/: properties.rs
crates/observatory-lance/: Cargo.toml  DESIGN.md  README.md
crates/observatory-lance/src/: atom_store.rs  decode.rs  error.rs  lib.rs  observation_store.rs  schema.rs
crates/observatory-lance/tests/: atom_store.rs  observation_store.rs  properties.rs
crates/observatory-observations/: Cargo.toml  README.md
crates/observatory-observations/src/: id.rs  identity.rs  kind.rs  lib.rs  observation.rs
crates/observatory-store/: Cargo.toml  DESIGN.md  README.md
crates/observatory-store/src/: atom_store.rs  decode.rs  encode.rs  error.rs  lib.rs  observation_store.rs  schema.rs  store.rs
crates/observatory-store/tests/: atom_store.rs  observation_store.proptest-regressions  observation_store.rs  properties.proptest-regressions  properties.rs
crates/observatory-xliff/: Cargo.toml
crates/observatory-xliff/src/: lib.rs
crates/observatory-xliff12/: Cargo.toml  README.md
crates/observatory-xliff12/src/: codec.rs  emit.rs  error.rs  lib.rs  parse.rs
crates/observatory-xliff12/tests/: properties.rs  roundtrip.rs
crates/observatory/src/: ir.rs  lib.rs
crates/observatory/tests/: properties.rs
docs/: DECISIONS.md  PHILOSOPHY.md
src/: identity.rs  ir.rs  lib.rs  normalize.rs
tests/: properties.proptest-regressions  properties.rs
