[package]
name = "observatory-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Normalization core for a translation data layer: content-addressed string atoms and observations."
repository = "https://github.com/EnzoAgosta/Observatory"
readme = "README.md"

[dependencies]
oxilangtag = { workspace = true }
sha2 = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"
