[package]
name = "observatory-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Normalization core for a translation data layer: content-addressed string atoms and observations."
repository = "https://github.com/EnzoAgosta/Observatory"
readme = "README.md"
keywords = ["translation", "i18n", "localization", "content-addressed", "normalization"]
categories = ["internationalization", "localization", "text-processing"]

[dependencies]
oxilangtag = { workspace = true }
sha2 = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"
