[package]
name = "observatory-observations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Append-only observations over observatory-core atoms: properties and relationships."
repository = "https://github.com/EnzoAgosta/Observatory"
readme = "README.md"
keywords = ["translation", "i18n", "localization", "observations", "event-sourcing"]
categories = ["internationalization", "localization", "data-structures"]

[dependencies]
observatory-core = { version = "0.2.0", path = "../observatory-core" }
serde_json = "1.0.150"
