[package]
name = "observatory-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lance-backed persistence for observatory atoms and observations."
repository = "https://github.com/EnzoAgosta/Observatory"

[dependencies]
arrow = "58"
observatory-core = { version = "0.2.0", path = "../observatory-core" }
sha2.workspace = true

[dev-dependencies]
proptest = "1.11.0"
